--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.554.0",
-    "next": "latest",
+    "next": "^16.1.1",
     "next-sanity": "^11.6.8",
-    "react": "latest",
-    "react-dom": "latest",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "sanity": "^4.18.0",
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.4.0"
